<?xml version="1.0"?>
<package format="2">
  <name>jrk_hardware</name>
  <version>0.3.0</version>
  <description>C++ code for controlling Jrk Pololu motor drivers in ros_control.</description>

  <maintainer email="laurence.de-bruxelles@stfc.ac.uk">Laurence de Bruxelles</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ros_control</depend>
  <depend>serial</depend>

  <export>
  </export>
</package>
